deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: stepik-api-service
              servicePort: 8000
          - path: /static
            backend:
              serviceName: nginx-service
              servicePort: 80
          - path: /media
            backend:
              serviceName: nginx-service
              servicePort: 80
